# simplefilewatcher

./: .gitignore  CMakeLists.txt
include/FileWatcher/: FileWatcher.h  FileWatcherImpl.h  FileWatcherWin32.h
source/: FileWatcher.cpp  FileWatcherWin32.cpp
